Add esp32 camera driver include path

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,11 +3,7 @@
 # Main component of TF Micro project 'person_detection_int8'.
 #
 
-idf_component_register(SRCS
-    ./src/detection_responder.cc
-    ./src/image_provider.cc
-    ./src/main.cc
-    ./src/main_functions.cc
-    ./src/model_settings.cc
-    INCLUDE_DIRS ""
+idf_component_register(
+    SRCS ./src/detection_responder.cc ./src/image_provider.cc ./src/main.cc ./src/main_functions.cc ./src/model_settings.cc
+    INCLUDE_DIRS . ../components/esp32-camera/driver/include
 )
