Restructure source files

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,24 @@
+#
+# tensorflow lite micro example
+#
 
-#
-# Main component of TF Micro project 'person_detection_int8'.
-#
+set(SRC_FILES
+    "./src/main.cc"
+    "./src/camera/app_camera_esp.cc"
+    "./src/camera/image_provider.cc"
+    "./src/inference/detection_responder.cc"
+    "./src/inference/main_functions.cc"
+    "./src/inference/model_settings.cc"
+)
+
+set(INC_DIRS
+    "."
+    "./src/camera"
+    "./src/inference"
+    "../components/esp32-camera/driver/include"
+)
 
 idf_component_register(
-    SRCS ./src/detection_responder.cc ./src/image_provider.cc ./src/main.cc ./src/main_functions.cc ./src/model_settings.cc ./src/app_camera_esp.cc
-    INCLUDE_DIRS . ../components/esp32-camera/driver/include
+    SRCS           "${SRC_FILES}"
+    INCLUDE_DIRS   "${INC_DIRS}"
 )
